[gd_scene load_steps=6 format=2]

[ext_resource path="res://Buildng Powering Puzzle/Test/Sprites/Generator Switch Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://Buildng Powering Puzzle/Test/GeneratorSwitch.gd" type="Script" id=2]
[ext_resource path="res://InteractableArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buildng Powering Puzzle/Test/Sprites/5x7 Transparent Number Sprite Sheet.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="GeneratorSwitch" type="Sprite"]
texture = ExtResource( 1 )
hframes = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -32.0 ]
}

[node name="FirstDigitSprite" type="Sprite" parent="."]
position = Vector2( -4.5, 4.5 )
texture = ExtResource( 4 )
hframes = 10

[node name="SecondDigitSprite" type="Sprite" parent="."]
position = Vector2( 0.5, 4.5 )
texture = ExtResource( 4 )
hframes = 10

[node name="InteractableArea" parent="." instance=ExtResource( 3 )]
enabled = false
popup_offset = Vector2( 0, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
shape = SubResource( 1 )
